# limo

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile.in  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
doc/: Doxyfile.in
libs/: CMakeLists.txt
src/: CMakeLists.txt
src/analysis/: CMakeLists.txt
src/analysis/include/limo/analysis/: Duality.hpp  Sensitivity.hpp
src/analysis/src/: Duality.cpp  Sensitivity.cpp
src/basis_finder_artificial/: CMakeLists.txt
src/basis_finder_artificial/include/limo/basis/: ArtificialBasisFinder.hpp
src/basis_finder_artificial/src/: ArtificialBasisFinder.cpp
src/basis_finder_big_m/: CMakeLists.txt
src/basis_finder_big_m/include/limo/basis/: BigMBasisFinder.hpp
src/basis_finder_big_m/src/: BigMBasisFinder.cpp
src/cli/: CMakeLists.txt
src/cli/src/: main.cpp
src/core/: CMakeLists.txt
src/core/include/limo/core/: LinearProgram.hpp  Solution.hpp
src/core/src/: LinearProgram.cpp  Solution.cpp
src/matrix/: CMakeLists.txt
src/matrix/include/limo/matrix/: Fraction.hpp  Matrix.hpp
src/matrix/src/: Fraction.cpp  Matrix.cpp
src/matrix/tests/: CMakeLists.txt  fraction_tests.cpp
src/numerics/: CMakeLists.txt
src/numerics/include/limo/numerics/: Fraction.hpp  Matrix.hpp
src/numerics/src/: Fraction.cpp  Matrix.cpp
src/numerics/tests/: CMakeLists.txt  fraction_tests.cpp  matrix_tests.cpp
src/simplex/: CMakeLists.txt
src/simplex/include/limo/simplex/: ModifiedSimplexSolver.hpp  SimplexSolver.hpp
src/simplex/src/: ModifiedSimplexSolver.cpp  SimplexSolver.cpp
src/thread_pool/: CMakeLists.txt
src/thread_pool/include/limo/thread_pool/: ThreadPool.hpp
src/thread_pool/src/: ThreadPool.cpp
src/thread_pool/tests/: CMakeLists.txt  thread_pool_tests.cpp
